# linux_c

./: .gitignore  CMakeLists.txt
cpu/: affinity.c
file/: file.c
network/: testSocketFdCount.c
network/epoll/: server.c
network/normal/: normal_socket_client.c  normal_socket_server.c
network/poll/: server.c
network/select/: server.c
process_communicate/: pipe.c  pipe_fifo.c  signal.c
